# HelixEngine

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  vcpkg.json
apps/runtime/: CMakeLists.txt
apps/runtime/src/: main.cpp
cmake/: CompilerWarnings.cmake  Options.cmake
engine/core/: CMakeLists.txt
engine/core/include/helix/core/: Application.hpp  Assert.hpp  Error.hpp  Log.hpp  LogCategories.hpp
engine/core/src/: Application.cpp  Assert.cpp  Error.cpp  Log.cpp
engine/math/: CMakeLists.txt
engine/math/include/helix/math/: Common.hpp  Types.hpp  Vector2.hpp
tests/: CMakeLists.txt  test_logging.cpp  test_vector2.cpp
